# BitMasher

./: .gitignore  CHANGELOG.md  README.md  TextBasedGame.py  bitmasher.c  bitmasher.py  build.sh  flake.nix  release.nix  setup.cfg  shell.nix
include/: anal.h
src/bitmasher_game/: TextBasedGame.py
