[metadata]
name = bitmasher_game
version = 5.74351224532
author = ona li toki e jan Epiphany tawa mi
description = BitMasher, a text adventure game where you act as an antivirus attempting to rid a computer of a RANSOMWARE attack.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = BitMasher, text-adventure-based game, cli, game, fast-paced, text-game
license = MIT
platforms = Windows, POSIX
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment :: Arcade
home_page = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/BitMasher
download_url = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/BitMasher/releases

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    bitmasher = bitmasher_game.TextBasedGame:main